[package]
name = "tui_player"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.2"
crossterm = "0.28.1"
# Fixed the ISOMP4 container flag
rodio = { version = "0.19.0", features = ["symphonia-aac", "symphonia-isomp4"] }
symphonia = { version = "0.5.5", features = ["all"] }
walkdir = "2.5.0"
audiotags = "0.5.0"
regex = "1.10.4"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
image = "0.25.10"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"
